--- a/style.css
+++ b/style.css
@@ -56,6 +56,30 @@
     background-color: yellow;
 }
 
+.card {
+    display: inline-block;
+    width: calc(25% - 20px); /* Adjust width and margin values as needed */
+    margin-right: 20px;
+    margin-bottom: 20px; /* Add margin at the bottom to separate rows */
+    vertical-align: top; /* Align cards to the top of the container */
+    box-sizing: border-box; /* Include padding and borders in the width */
+  }
+
+  .card-text {
+    margin: 10px;
+    padding: 10px;
+  }
+
+  .newCard{
+    background-color: yellowgreen;
+  }
+
+  .newOnecar{
+    background-color: grey;
+  }
+  
+  
+
 
 
 
